<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lunch List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_lunchlist">Hello world, Lunchlist!</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="takeout">Takeout</string>
    <string name="sitdown">Sit-Down</string>
    <string name="delivery">Delivery</string>

</resources>