<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:stretchColumns="1">

    <TableRow >
        <TextView android:text="@string/name"/>
        <EditText android:id="@+id/name"/>
    </TableRow>
    <TableRow >
        <TextView android:text="@string/address"/>
        <EditText android:id="@+id/addr"/>
    </TableRow>
    
    <TableRow >
        <TextView android:text="@string/type"/>
        <RadioGroup android:id="@+id/types">
            <RadioButton android:id="@+id/take_out"
                android:text="@string/takeout"/>
            <RadioButton android:id="@+id/sit_down"
                android:text="@string/sitdown"/>
            <RadioButton android:id="@+id/delivery"
                android:text="@string/delivery"/>
        </RadioGroup>
    </TableRow>
    
    <Button android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</TableLayout>